--- a/videos/4kids.html
+++ b/videos/4kids.html
@@ -43,49 +43,64 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://youtu.be/-4A4XzRx0UY?si=thIMEzBzbLdT3Esv" class="image fit"><img src="https://img.youtube.com/vi/-4A4XzRx0UY/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Ali Baba and the 40 Thieves kids story</h3>
+									<p>Ali Baba and the 40 Thieves + Aladdin kids story cartoon animation</p>
+									<a href="https://youtu.be/-4A4XzRx0UY?si=thIMEzBzbLdT3Esv" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/dEEPUx7FZCw?si=QzVuZhNglNl1H9zN" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://youtu.be/DR-cfDsHCGA?si=vUNBKPB6OAGBvz_w" class="image fit"><img src="https://img.youtube.com/vi/DR-cfDsHCGA/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Counting 1-10 Song | Number Songs for Children</h3>
+									<p>Counting 1-10 Song | Number Songs for Children.</p>
+									<a href="https://youtu.be/DR-cfDsHCGA?si=vUNBKPB6OAGBvz_w" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://youtu.be/4DcolrBCErQ?si=PwB0aRT2Kf9uso25" class="image fit"><img src="https://img.youtube.com/vi/4DcolrBCErQ/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Little Adam Nasheed Compilation 26 Minutes</h3>
+									<p>Little Adam Nasheed Compilation 26 Minutes | Vocal Only Songs For Kids</p>
+									<a href="https://youtu.be/4DcolrBCErQ?si=PwB0aRT2Kf9uso25" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://youtu.be/ZGtnuPTMBAs?si=597FB4282kqOOPAp" class="image fit"><img src="https://img.youtube.com/vi/ZGtnuPTMBAs/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Twinkle Twinkle Little Star</h3>
+									<p>Twinkle Twinkle Little Star (Muslim Version)</p>
+									<a href="https://youtu.be/ZGtnuPTMBAs?si=597FB4282kqOOPAp" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="https://youtu.be/IpTZ1t7NJ9E?si=xF7fqw2NWF6u0JF9" class="image fit"><img src="https://img.youtube.com/vi/IpTZ1t7NJ9E/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3>Your Mother</h3>
+									<p>Muhammad Sulaiman - Your Mother | I Look, I See Animated Series</p>
+									<a href="https://youtu.be/IpTZ1t7NJ9E?si=xF7fqw2NWF6u0JF9" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33HmEfO" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj3lHmEfO" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
+
 
 						</div>
 
