--- a/videos/DocumentriesAndMovies.html
+++ b/videos/DocumentriesAndMovies.html
@@ -37,53 +37,57 @@
 								<a href="https://youtu.be/mdiViGvY5xQ?si=QUpRtZrnfy7ruYo4" class="image fit"><img src="https://img.youtube.com/vi/mdiViGvY5xQ/maxresdefault.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>The Message</h3>
-									<p>October 2023.</p>
+									<p>THE MESSAGE - Hollywood English Movie | Classic Hollywood War Action Full Movies</p>
 									<a href="https://youtu.be/mdiViGvY5xQ?si=QUpRtZrnfy7ruYo4" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="image fit"><img src="https://img.youtube.com/vi/sosVfruR9bY/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3> Muhammad The Messenger of God</h3>
+									<p>English Translation || Muhammad The Messenger of God Full Movie</p>
+									<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
 								<a href="https://youtu.be/gWBsjPy_M-U?si=M5LprEM5akkun9pm" class="image fit"><img src="https://i.ytimg.com/vi/8UBjYZVuWVY/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCTIQ6sSFRFbYOgz2A5e47jE8mp7A" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<h3>Lion of the Desert 1980</h3>
+									<p>Lion of the Desert 1980 (The story of Omar Mukhtar)</p>
 									<a href="https://youtu.be/gWBsjPy_M-U?si=M5LprEM5akkun9pm" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://youtu.be/4nT6ifKkhrY?si=oZVz10Op_slvoAs0" class="image fit"><img src="https://img.youtube.com/vi/4nT6ifKkhrY/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Julius Caesar | Epic Action Movie</h3>
+									<p>Julius Caesar | Epic Action Movie, historic</p>
+									<a href="https://youtu.be/4nT6ifKkhrY?si=oZVz10Op_slvoAs0" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://youtu.be/rVlsnDZm0ZM?si=-9j94_PqAPk-hFuQ" class="image fit"><img src="https://img.youtube.com/vi/RVwLbgyO_lI/default.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Lawrence Of Arabia 1962</h3>
+									<p>Lawrence of Arabia: A superlative cinematic achievement portraying the real-life exploits of TE Lawrence. That ZMC's version has only 7k views over in three years is a testament to viewers' desire to screen at the highest possible res. .</p>
+									<a href="https://youtu.be/RVwLbgyO_lI?si=-yFS0IjelU8MquPS" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="https://youtu.be/iJBzY5NhvT0?si=yKZVFCm2C-wHLJYe" class="image fit"><img src="https://img.youtube.com/vi/iJBzY5NhvT0/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>THE LOST EMPIRE</h3>
+									<p>THE LOST EMPIRE - Hollywood English Movie | Colin Firth & Ben Kingsley In English Full Action Movie
+									</p>
+									<a href="https://youtu.be/iJBzY5NhvT0?si=yKZVFCm2C-wHLJYe" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -106,7 +110,7 @@
 						</ul>
 						<p class="copyright">&copy; EPIC-LIGHT. Design by Ali Ismail</p>
 					</div>
-					<iframe src="https://zeno.fm/player/epic-light" width="768" height="300" frameborder="0" scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px;">A Zeno.FM Station</a>
+					<iframe src="https://zeno.fm/player/epic-light" width="50%" height="40%" frameborder="0" scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px;">A Zeno.FM Station</a>
 				</footer>
 
 		<!-- Scripts -->
