--- a/videos/IslamicLectures.html
+++ b/videos/IslamicLectures.html
@@ -54,7 +54,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/1cmCBSrG2a4?si=zC2tdn_06E35Fa61" class="image fit"><img src="https://i.ytimg.com/an_webp/1cmCBSrG2a4/mqdefault_6s.webp?du=3000&sqp=CIidrqwG&rs=AOn4CLBBs1tJ79e-EPdx7C7U8Cd3aa1kcg" alt="" /></a>
+								<a href="https://youtu.be/1cmCBSrG2a4?si=zC2tdn_06E35Fa61" class="image fit"><img src="https://img.youtube.com/vi/1cmCBSrG2a4/maxresdefault.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Three Practical Steps to Maximize Your Legacy | Dr. Yasir Qadhi</h3>
 									<p>Shaykh Dr.  @YasirQadhigives spiritual insights on how to leave a good legacy by leveraging our precious time on earth to do and be good, quietly and abundantly, before death.
@@ -64,7 +64,8 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/4bC-AVA67Nw" class="image fit"><img src="https://i.ytimg.com/an_webp/4bC-AVA67Nw/mqdefault_6s.webp?du=3000&sqp=CPj_rawG&rs=AOn4CLCMxsx0TDwoTVNOW0UZOE9VsaMgrw" alt="" /></a>
+								<a href="https://youtu.be/4bC-AVA67Nw" class="image fit"><img src="https://img.youtube.com/vi/4bC-AVA67Nw/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
 									<h3>Prophetic Medicine, Sunnah Foods, and Eating for Your Body Type | Nutritionist Ilham Malick</h3>
 									<p>Certified Health Coach Ilham Malick shares practical insights on eating a healthy holistic diet in light of Sunnah (Prophetic way of living and the divine medicine for spiritual and physical well-being (Tibbe Nabawi)),</p>
@@ -73,7 +74,8 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/2JkBUL8u1DM?si=cth5bGGH7wAP-LNY" class="image fit"><img src="https://i.ytimg.com/an_webp/2JkBUL8u1DM/mqdefault_6s.webp?du=3000&sqp=CP-srqwG&rs=AOn4CLDIeQDoTTzSCrcnkcXoILyqIy49Cw" alt="" /></a>
+								<a href="https://youtu.be/2JkBUL8u1DM?si=cth5bGGH7wAP-LNY" class="image fit"><img src="https://img.youtube.com/vi/2JkBUL8u1DM/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
 									<h3>Overcoming Desires and Difficulties | A Qur'anic View - Dr. Omar Suleiman</h3>
 									<p>
@@ -85,7 +87,8 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/TqUBXr9GV-Y" class="image fit"><img src="https://i.ytimg.com/an_webp/TqUBXr9GV-Y/mqdefault_6s.webp?du=3000&sqp=CKSQrqwG&rs=AOn4CLBQhPnD1REhupw7u2jjnyaBMnC_jQ" alt="" /></a>
+								<a href="https://youtu.be/TqUBXr9GV-Y" class="image fit"><img src="https://img.youtube.com/vi/TqUBXr9GV-Y/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
 									<h3>How to see the unseen! - Mohamed Hoblos</h3>
 									<p>he Prophet (ﷺ) characterised the "Ummah" as one body, and when one part is injured, the entire body feels the pain. 
@@ -127,9 +130,10 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/Ld0_7g2PGUA?si=G__Ida_fcP8-9xrD" class="image fit"><img src="https://i.ytimg.com/an_webp/Ld0_7g2PGUA/mqdefault_6s.webp?du=3000&sqp=CMCVrqwG&rs=AOn4CLA4Mind4flgJQkyatscor6K3ZKthA" alt="" /></a>
+								<a href="https://youtu.be/Ld0_7g2PGUA?si=G__Ida_fcP8-9xrD" class="image fit"><img src="https://img.youtube.com/vi/Ld0_7g2PGUA/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Dealing with the Fitnah Around us | Ustadh Abu Taymiyyah</h3>
+									<h3>Dealing with the Fitnah Around us.</h3>
 									<p>Dealing with the Fitnah Around us | Ustadh Abu Taymiyyah,</p>
 									<a href="https://youtu.be/Ld0_7g2PGUA?si=G__Ida_fcP8-9xrD" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
