--- a/videos/nasheed.html
+++ b/videos/nasheed.html
@@ -36,49 +36,66 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://youtu.be/NrsCej6SVxM?si=sDIWvnBJddZn5Y2k" class="image fit"><img src="https://img.youtube.com/vi/NrsCej6SVxM/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Alhamdulillah</h3>
-									<p>In the pipe line, for any inconviniences loook forward to see more.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>The Beauty of Existence - Heart Touching Nasheed</h3>
+									<p>The Beauty of Existence Nasheed was translated into english by our team, and was sent to us by Muhammad al Muqit to expand his reach to the English speaking audience, all footage in this video is licensed to mercifulservant media.
+									</p>
+									<a href="https://youtu.be/NrsCej6SVxM?si=sDIWvnBJddZn5Y2k" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://youtu.be/5OEI6hJyGq8?si=o-FOYKFXyrFJSL5a" class="image fit"><img src="https://img.youtube.com/vi/5OEI6hJyGq8/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Alhamdulillah</h3>
-									<p>In the pipe line, for any inconviniences loook forward to see more.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>A is for Allah | Zain Bhikha | Official Video</h3>
+									<p>Written by Yusuf Islam Originally released in 2000 (A is for Allah) and 2001(Faith).</p>
+									<a href="https://youtu.be/5OEI6hJyGq8?si=o-FOYKFXyrFJSL5a" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://youtu.be/caeTvZrlVTo?si=Po2MMzZalD0WMJcl" class="image fit"><img src="https://img.youtube.com/vi/caeTvZrlVTo/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Alhamdulillah</h3>
-									<p>In the pipe line, for any inconviniences loook forward to see more.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Forgive Me Allah - Astagfirullah | Heart Touching Nasheed</h3>
+									<p>Forgive Me Allah - Astagfirullah | Heart Touching Nasheed
+										By Omar Esa.</p>
+									<a href="https://youtu.be/caeTvZrlVTo?si=Po2MMzZalD0WMJcl" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://youtu.be/qpRdwFmAjYY?si=c2SBDtzmxZ42zgFK" class="image fit"><img src="https://img.youtube.com/vi/qpRdwFmAjYY/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Alhamdulillah</h3>
-									<p>In the pipe line, for any inconviniences loook forward to see more.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>WHERE IS THE LOVE </h3>
+									<p>WHERE IS THE LOVE (Muslim Cover) Ft. Omar Esa, Muslim Belal, Essam</p>
+									<a href="https://youtu.be/qpRdwFmAjYY?si=c2SBDtzmxZ42zgFK" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="https://youtu.be/6i9JW1j0mhA?si=b-FMwOtkeQ1DFmiQ" class="image fit"><img src="https://img.youtube.com/vi/WldOMvjkjqE/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Alhamdulillah</h3>
-									<p>In the pipe line, for any inconviniences loook forward to see more.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Forgive Us </h3>
+									<p>Forgive Us BY Kabirvocals</p>
+									<a href="https://youtu.be/WldOMvjkjqE?si=0kQbhTrxuGrMyHya" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/6xqu5LenTaA?si=zL69O2tvtgTAX0P4" class="image fit"><img src="https://img.youtube.com/vi/6xqu5LenTaA/maxresdefault.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Palestine (Vocals Only) </h3>
+									<p>Muad - Palestine (Vocals Only)</p>
+									<a href="https://youtu.be/6xqu5LenTaA?si=zL69O2tvtgTAX0P4" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
 
 						</div>
 
