--- a/videos/videoG.html
+++ b/videos/videoG.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Video Gallery.EPIC LIGHT</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EPIC-LIGHT VIDEOS</title>
     <link rel="stylesheet" href="vidG.css">
-
 </head>
 
 <body>
     <section id="banner" data-video="images/banner">
         <div class="inner">
             <header>
-                <h1>BROWSE YOUR NICHE</h1    
+                <h1>BROWSE YOUR NICHE</h1>
             </header>
         </div>
     </section>
+
     <div class="header">
         <h3>Search For Your Favorite </h3>
         <hr width="98%">
     </div>
 
-    
     <div class="cards">
         <div class="card">
-            <a href="IslamicLectures.html"><img src="/images/video_image.png" alt="" class="cardP"></a>
+            <a href="IslamicLectures.html">
+                <img src="/images/video_image.jpg" alt="" class="cardP">
+            </a>
             <div class="description">ISLAMIC LECTURES</div>
         </div>
 
         <div class="card">
-            <a href="4kids.html"><img src="/images/video_image.png" alt="" class="cardP"></a>
+            <a href="4kids.html">
+                <img src="/images/video_image.jpg" alt="" class="cardP">
+            </a>
             <div class="description">4KIDZ</div>
         </div>
 
         <div class="card">
-            <a href="nasheed.html"><img src="/images/video_image.png" alt="" class="cardP"></a>
+            <a href="nasheed.html">
+                <img src="/images/video_image.jpg" alt="" class="cardP">
+            </a>
             <div class="description">NASHEEDS</div>
         </div>
 
         <div class="card">
-            <a href="DocumentriesAndMovies.html"><img src="/images/video_image.png" alt="" class="cardP"></a>
-            <div class="description">NEWS |DOCUMENTRIES| MOVIES</div>
+            <a href="DocumentriesAndMovies.html">
+                <img src="/images/video_image.jpg" alt="" class="cardP">
+            </a>
+            <div class="description">NEWS | DOCUMENTARIES | MOVIES</div>
         </div>
 
         <div class="card">
-            <a href="Academia.html"><img src="/images/video_image.png" alt="" class="cardP"></a>
+            <a href="Academia.html">
+                <img src="/images/video_image.jpg" alt="" class="cardP">
+            </a>
             <div class="description">ACADEMIA/ E-LEARNING</div>
         </div>
 
         <div class="card">
-            <a href="Competition.html"><img src="/images/video_image.png" alt="" class="cardP"></a>
+            <a href="Competition.html">
+                <img src="/images/video_image.jpg" alt="" class="cardP">
+            </a>
             <div class="description">COMPETITIONS</div>
         </div>
     </div>
-</body>
 
-<iframe src="https://zeno.fm/player/epic-light" width="768" height="300" frameborder="0" scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px;">A Zeno.FM Station</a>
+    <iframe src="https://zeno.fm/player/epic-light" width="40%" height="20%" frameborder="0" scrolling="no"></iframe>
+</body>
 
 </html>
