--- a/videos/Academia.html
+++ b/videos/Academia.html
@@ -43,11 +43,11 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://rumble.com/v43x5m0-good-news-infinite-hope-167-happy-new-year.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
+									<h3>ndfghjk</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="hhttps://rumble.com/v43x5m0" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
