--- a/videos/Academia.html
+++ b/videos/Academia.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Islamic Lectures by Fosco GMSA</title>
+		<title>Academia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,8 @@
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
-							<h1>ISLAMIC LECTURES</h1>
-							<p>This sections include the lectures of varous sheikhs<br />
+							<h1>ACADEMICS</h1>
+							<p>History, whats, where, when and how.<br />
 							
 						</header>
 						<a href="#main" class="more">Learn More</a>
@@ -34,47 +34,61 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="https://youtu.be/Fe9FiaVE-Mo?si=nhGLcsHeCLhBXtVz" class="image fit"><img src="https://img.youtube.com/vi/Fe9FiaVE-Mo/maxresdefault.jpg" alt="" /></a>
+								<a href="https://youtu.be/Lgfaqy0cDFY?si=AT4Lj0OMTdVLChju" class="image fit"><img src="https://img.youtube.com/vi/Lgfaqy0cDFY/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>In Defence of Gaza</h3>
-									<p>October 2023.</p>
-									<a href="https://youtu.be/Fe9FiaVE-Mo?si=nhGLcsHeCLhBXtVz" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>History's Greatest Writers:</h3>
+									<p>
+										0:00 Marcus Aurelius
+										1:04:08 Machiavelli
+										2:10:53 Nostradamus
+										3:10:21 Shakespeare
+										4:20:11 Tolkien
+										5:18:16 Orwell
+										
+										#Biography #History #Documentaryp>
+									<a href="https://youtu.be/Lgfaqy0cDFY?si=AT4Lj0OMTdVLChju" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://rumble.com/v43x5m0-good-news-infinite-hope-167-happy-new-year.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://youtu.be/2F_KH_cs6RY?si=kmkqecEPtNwsqfeh" class="image fit"><img src="https://img.youtube.com/vi/2F_KH_cs6RY/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>ndfghjk</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="hhttps://rumble.com/v43x5m0" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Features of Academic Writing</h3>
+									<p>An overview of the basic components in good academic essay writing.</p>
+									<a href="https://youtu.be/Cq4J8bPBcck?si=UGT1CN6HVEH2P78B" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/dEEPUx7FZCw?si=QzVuZhNglNl1H9zN" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://youtu.be/0ZXKmIXJ7lk?si=G1mKDdR5oawQZCm5" class="image fit"><img src="https://img.youtube.com/vi/0ZXKmIXJ7lk/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Legal Writing Basics: Three Key Skills Sample
+									</h3>
+									<p>This video introduces you to the "Golden Rule" of Legal Writing, to help the reader get the content quickly and easily.   </p>
+									<a href="https://youtu.be/0ZXKmIXJ7lk?si=G1mKDdR5oawQZCm5" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://youtu.be/ME8BrEVa7yU?si=H6aHA9kKczWlzFOz" class="image fit"><img src="https://img.youtube.com/vi/ME8BrEVa7yU/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Reflective Writing </h3>
+									<p>Reflective Writing-Journal</p>
+									<a href="https://youtu.be/ME8BrEVa7yU?si=H6aHA9kKczWlzFOz" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://youtu.be/crREpRwdwIA?si=eI7au9MUc9HVN8NW" class="image fit"><img src="https://img.youtube.com/vi/uC4GRLSD2Jo/maxresdefault.jpg
+									" alt=" " /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>RANKSCALE (presentation, EBS135) Clinton's Speech (Audio)</h3>
+									<p>fyi: grammatical not gramatical.</p>
+									<a href="https://youtu.be/uC4GRLSD2Jo?si=6cfPbnX5pWVbGpiW" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
