--- a/videos/DocumentriesAndMovies.html
+++ b/videos/DocumentriesAndMovies.html
@@ -42,15 +42,7 @@
 								</div>
 							</div>
 
-							<div class="box">
-								<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="image fit"><img src="https://img.youtube.com/vi/sosVfruR9bY/maxresdefault.jpg
-									" alt="" /></a>
-								<div class="inner">
-									<h3> Muhammad The Messenger of God</h3>
-									<p>English Translation || Muhammad The Messenger of God Full Movie</p>
-									<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
-								</div>
-							</div>
+							
 
 							<div class="box">
 								<a href="https://youtu.be/gWBsjPy_M-U?si=M5LprEM5akkun9pm" class="image fit"><img src="https://i.ytimg.com/vi/8UBjYZVuWVY/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCTIQ6sSFRFbYOgz2A5e47jE8mp7A" alt="" /></a>
@@ -88,6 +80,80 @@
 									<p>THE LOST EMPIRE - Hollywood English Movie | Colin Firth & Ben Kingsley In English Full Action Movie
 									</p>
 									<a href="https://youtu.be/iJBzY5NhvT0?si=yKZVFCm2C-wHLJYe" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/kaUemcqIQ-k?si=dD0bwSWhR44p3Iv6" class="image fit"><img src="https://img.youtube.com/vi/kaUemcqIQ-k/maxresdefault.jpg
+
+									" alt="" /></a>
+								<div class="inner">
+									<h3>United States of Secrets, Part One (full documentary)</h3>
+									<p>FRONTLINE tells the inside story of the U.S. government’s massive and controversial secret surveillance program that began in the wake of September 11 -- and the lengths they went to trying to keep it hidden from the public. (Aired 2014)
+									</p>
+									<a href="https://youtu.be/kaUemcqIQ-k?si=dD0bwSWhR44p3Iv6" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/1CVs6-epA1o?si=lZE1HZ4UA2luV3BS" class="image fit"><img src="https://img.youtube.com/vi/1CVs6-epA1o/maxresdefault.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Citizen Four - 2014</h3>
+									<p>A documentarian and a reporter travel to Hong Kong for the first of many meetings with Edward Snowden.
+									</p>
+									<a href="https://youtu.be/1CVs6-epA1o?si=lZE1HZ4UA2luV3BS" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="image fit"><img src="https://img.youtube.com/vi/sosVfruR9bY/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3> Muhammad The Messenger of God</h3>
+									<p>English Translation || Muhammad The Messenger of God Full Movie</p>
+									<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+
+							<div class="box">
+								<a href="https://youtu.be/7SrbpnIeuYs?si=P4LMNkrdTmpzMGBo" class="image fit"><img src="https://img.youtube.com/vi/f1cGZv569UQ/maxresdefault.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Snowden</h3>
+									<p>Snowden: Patriot or whistleblower</p>
+									<a href="https://youtu.be/7SrbpnIeuYs?si=xuW6gyvbdTxGPa0x" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+
+							<div class="box">
+								<a href="https://youtu.be/T4zh17YEfxQ?si=pN9CqG4WdTrdNx78" class="image fit"><img src="https://img.youtube.com/vi/T4zh17YEfxQ/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3>THE IMPOSSIBLE SPY</h3>
+									<p>Young Israeli husband Eli Cohen is recruited by the Mossad in the early 1960's and sent to Syria. Telling his wife he has a new job that requires extensive business travel, he takes up residence in Syria, where he befriends a high-ranking Syrian government official and provides invaluable information to Israel.</p>
+									<a href="https://youtu.be/T4zh17YEfxQ?si=pN9CqG4WdTrdNx78" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/AKFu2-TNeG8?si=ZVoOhFPoFoGik1U1" class="image fit"><img src="https://img.youtube.com/vi/xXAdfgwL9YM/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3>ROBIN HOOD </h3>
+									<p>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown in a thrilling action-adventure packed with gritty battlefield exploits, mind-blowing fight choreography.</p>
+									<a href="https://youtu.be/AKFu2-TNeG8?si=ZVoOhFPoFoGik1U1" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/9Qak7Gux1gc?si=F8ZUBxnn5Y493SxM" class="image fit"><img src="https://img.youtube.com/vi/-JWxIVVeV98/maxresdefault.jpg
+
+									" alt="" /></a>
+								<div class="inner">
+									<h3>ATOMIC BOMBING OF HIROSHIMA DOCUMENTARY </h3>
+									<p>From 1941 to 1945, America was at War with Japan. It started with a surprise attack on Pearl Harbour and it ended with the detonation of 2 atomic bombs. Between these two events countless soldiers and civilians were killed in some of the most brutal fighting of WW2. ,J Robert Oppenheimer and other key figures involved in the decision to drop the first atomic bomb discuss their motivations in this rare NBC News documentary.  Originally produced two decades after the bombings of Hiroshima and Nagasaki, this presentation features new insight from NBC News Presidential His.</p>
+									<a href="https://youtu.be/-JWxIVVeV98?si=k1HUDVJrw2iGHO3j" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
